--- a/assets/htmls/index.html
+++ b/assets/htmls/index.html
@@ -8,10 +8,17 @@
   <meta http-equiv='X-UA-Compatible' content='ie=edge'>
   <title>Document</title>
   <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+  <script>
+    window.onload = function () {
+      const lang = navigator.language;
+      const txtLang = document.getElementById('txtLang');
+      txtLang.innerHTML=lang;
+    }
+  </script>
 </head>
 
 <body>
-  <h1>Great!</h1>
+  <h1>Lang: <span id="txtLang"></span></h1>
 </body>
 
 </html>
